cloudformation/Nested-Stack-VPC6.yml
Description:  This template for VPC6
Parameters:
  EC2KEY:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
Mappings:
  AWSInstanceType2Arch:
    t2.small:
      Arch: HVM64
  AWSRegionArch2AMI:
    cn-northwest-1:
      HVM64: ami-00a47f95dff9b0ac0
    cn-north-1:
      HVM64: ami-0442b0a087508033e
    ap-southeast-1:
      HVM64: ami-05c64f7b4062b0a21
    us-west-1:
      HVM64: ami-03caa3f860895f82e
    us-west-2:
      HVM64: ami-04590e7389a6e577c
    us-east-1:
      HVM64: ami-062f7200baf2fa504
    us-east-2:
      HVM64: ami-02ccb28830b645a41
    ap-south-1:
      HVM64: ami-0217a85e28e625474
    ap-northeast-1:
      HVM64: ami-011facbea5ec0363b
    ap-northeast-2:
      HVM64: ami-0bea7fd38fabe821a
    eu-central-1:
      HVM64: ami-07cda0db070313c52
    eu-west-1:
      HVM64: ami-0713f98de93617bb4
    eu-west-2:
      HVM64: ami-0089b31e09ac3fffc
Resources:
  VPC6:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.6.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: name
          Value: VPC6
  VPC6InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: VPC6
  VPC6InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref VPC6InternetGateway
      VpcId: !Ref VPC6
  VPC6Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC6
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.6.1.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: VPC6Subnet1
  VPC6Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC6
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: 10.6.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: VPC6Subnet2
  VPC6RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC6
      Tags:
        - Key: Name
          Value: VPC6RouteTable
  VPC6DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPC6InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref VPC6RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPC6InternetGateway
  VPC6Subnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VPC6RouteTable
      SubnetId: !Ref VPC6Subnet1
  VPC6Subnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VPC6RouteTable
      SubnetId: !Ref VPC6Subnet2
  VPC6SecurtiyGroupAllowSSHandPing:
    Type: 'AWS::EC2::SecurityGroup'
    DependsOn: VPC6Subnet2RouteTableAssociation
    Properties:
      GroupDescription: VPC6 - Allow SSH and Ping
      VpcId: !Ref VPC6
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: '8'
          ToPort: '-1'
          CidrIp: 0.0.0.0/0
  VPC6EC2:
    Type: 'AWS::EC2::Instance'
    DependsOn: VPC6SecurtiyGroupAllowSSHandPing
    Properties:
      KeyName: !Ref EC2KEY
      ImageId: !FindInMap 
        - AWSRegionArch2AMI
        - !Ref 'AWS::Region'
        - !FindInMap 
          - AWSInstanceType2Arch
          - t2.small
          - Arch
      InstanceType: t2.small
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      SubnetId: !Ref VPC6Subnet1
      SecurityGroupIds:
        - !Ref VPC6SecurtiyGroupAllowSSHandPing
      UserData: !Base64 
        'Fn::Join':
          - ''
          - - |
              #! /bin/bash
            - |
              yum update -y
            - |+
Outputs:
    VPC6PrivateIP:
      Description: EC2 Private IP in VPC6
      Value: !GetAtt VPC6EC2.PrivateIp
    VPC6Subnet1:
      Value: !Ref VPC6Subnet1
    VPC6Subnet2:
      Value: !Ref VPC6Subnet2
    VPC6:
      Value: !Ref VPC6
    VPC6RouteTable:
      Value: !Ref VPC6RouteTable
